# dbus-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs.yml  test.yml
dbus-client-macros/: Cargo.toml
dbus-client-macros/src/: dbus_object.rs  derive.rs  lib.rs
examples/: wpa.rs
src/: lib.rs
